test/project/force-app/main/default/objects/DetailObject__c/DetailObject__c.object-meta.xml
<CustomObject>
    <label>DetailObject</label>
    <nameField>
        <displayFormat>D-{0}</displayFormat>
        <label>DetailObjectNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>