test/project/force-app/main/default/objects/DetailObject__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>FLOOR(
  AmountExcludingTax__c * (1 + TaxRate__c)
)</formula>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>