test/project/force-app/main/default/objects/DetailObject__c/fields/AmountExcludingTax__c.field-meta.xml
<CustomField>
    <fullName>AmountExcludingTax__c</fullName>
    <label>AmountExcludingTax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>