test/project/force-app/main/default/objects/DetailObject__c/fields/MasterDetail__c.field-meta.xml
<CustomField>
    <fullName>MasterDetail__c</fullName>
    <label>MasterDetail</label>
    <referenceTo>Sample__c</referenceTo>
    <relationshipName>MasterDetail_DetailObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>