test/project/force-app/main/default/objects/DetailObject__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <defaultValue>10</defaultValue>
    <label>TaxRate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>